# rover

./: Cargo.toml  README.md  emulate_navqplus.yml  host.yml  navqplus.yml
camera/: camera.py
electrode/: Cargo.toml
electrode/src/: main.rs
emulate_camera/: emulate_camera.py
emulate_lidar/: Cargo.toml
synapse/src/: main.rs
viewer/: Cargo.toml
vision/: vision.py
