[package]
name = "electrode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = "0.3.3"
tokio = { version = "1", features = ["full"] }
log = "0.4.21"
simple_logger = "5.0.0"
clap = "4.5.4"
zenoh = "0.11.0-rc.2"